-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.1.0, Lustre 1.8.6
-
None
-
3
-
4272
This issue was created by maloo for bobijam <bobijam@whamcloud.com>
This issue relates to the following test suite run: https://maloo.whamcloud.com/test_sets/1fde8d92-a4f6-11e0-b786-52540025f9af.
The sub-test test_37 failed with the following error:
set tunables failed for symlink device
- Trackbacks
-
Changelog 1.8
{}version 1.8.7wc1{} {}Support for networks: socklnd \any kernel supported by Lustre, qswlnd Qsnet kernel modules 5.20 and later, openiblnd IbGold 1.8.2, o2iblnd OFED 1.3, 1.4.1, 1.4.2, 1.5.1, 1.5.2, 1.5.3.1 and 1.5.3.2 gmlnd GM 2.1....