LU-478 Don't set tunables on lvm device

It doesn't make sense to set max_sectors_kb on lvm device, just
ignore the "/dev/mapper/xxx" device in set_blockdev_tunables().

Signed-off-by: Niu Yawei <niu@whamcloud.com>
Change-Id: I54c0e427772d8a1066a37d011d4cfd18240374b5